Finish this little project
As a result, I find Svelte and Sapper really, really nice.
Combined with Tailwind it's a breeze to make UIs ! :heart:

--- a/src/template.html
+++ b/src/template.html
@@ -24,7 +24,12 @@
     <body>
         <!-- The application will be rendered inside this element,
 	     because `src/client.js` references it -->
-        <div id="sapper">%sapper.html%</div>
+        <div
+            id="sapper"
+            class="overflow-x-hidden w-screen min-h-screen relative"
+        >
+            %sapper.html%
+        </div>
 
         <!-- Sapper creates a <script> tag containing `src/client.js`
 	     and anything else it needs to hydrate the app and
